--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -1,7 +1,4 @@
 
-%This is a template for producing reports for "Dagstuhl Manifestos".
-%See dagman.pdf for furhter information.
-
 \documentclass[a4paper,UKenglish]{dagman}
   %for A4 paper format use option "a4paper", for US-letter use option "letterpaper"
   %for british hyphenation rules use option "UKenglish", for american hyphenation rules use option "USenglish"
@@ -12,17 +9,17 @@
 \bibliographystyle{plain}%the recommended bibstyle
 
 %Author macros: begin%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subject{Manifesto from Dagstuhl Perspectives Workshop 10101}
-\title{A Manifesto Sample}
-\titlerunning{A Manifesto Sample}%optional
+\subject{Manifesto for Dagstuhl Perspectives Workshop 16252}
+\title{Manifesto on Engineering Academic Software}
+% \titlerunning{A Manifesto Sample}%optional
 
-\author[1]{John Q. Open}
-\author[2]{Joan R. Access}
+\author[1]{Long list of authors}
+%\author[2]{Joan R. Access}
 \affil[1]{Dummy University Computing Laboratory, Dummy Country
   \texttt{open@dummyuni.org}}
-\affil[2]{Department of Informatics, Dummy College Address, Country
-  \texttt{access@dummycollege.org}}
-\authorrunning{J.Q. Open and J.R. Access}%optional
+%\affil[2]{Department of Informatics, Dummy College Address, Country
+%  \texttt{access@dummycollege.org}}
+\authorrunning{Long list of authors}%optional
 
 \subjclass{Dummy classification: please check \url{http://www.acm.org/about/class/ccs98-html}. Cite, for example, as:  ``B.3.3 Performance Analysis and Design Aids, C.1.2 Multiple Data Stream Architectures (Multiprocessors)''}% mandatory: Please choose ACM 1998 classifications from http://www.acm.org/about/class/ccs98-html . E.g., cite as "F.1.1 Models of Computation". 
 \keywords{Dummy keywords: Please provide 1--5 keywords}% mandatory: Please provide 1-5 keywords
@@ -48,7 +45,7 @@
 \maketitle
 
 \begin{abstract}
-This is the manifesto of the Dagstuhl Perspectives Workshop 10101.  The goal is to describe the state-of-the-art in a field along with its shortcomings and strenghts. Based on this, position statements and perspectives for the future should be described. A manifesto typically has a less technical character; instead it provides guidelines and roadmaps for a sustainable organisation of future progress. 
+ABSTRACT
 \end{abstract}
 
 \section*{Executive Summary}
@@ -59,112 +56,66 @@ This is the manifesto of the Dagstuhl Perspectives Workshop 10101.  The goal is 
 %}
 %\license
 
-This executive summary summarizes the perspectives discussed in the workshop. The workshop focused on\begin{itemize}
-\item important issues,
-\item relevant problems, and
-\item adequate solutions.
-\end{itemize}
-
-As a major result from the workshops, the following problems and roadmaps have been identified: 
-\begin{enumerate}
-\item The problem of writing a brief, but concise executive summary.
-\item The problem of collecting all abstracts from talks.
-\item The problem of preparing summaries from working groups, open problem sessions, and panel discussions.
-\end{enumerate}
+SUMMARY
 
 \tableofcontents
 
 
 \section{Introduction}
 
-Proin metus dolor, vehicula eu hendrerit quis, varius in turpis. Etiam at felis enim. Proin hendrerit, felis faucibus semper pellentesque, lacus augue ultrices augue, mattis rutrum arcu arcu vitae urna. Quisque sagittis nulla et felis convallis ut sollicitudin turpis adipiscing. Maecenas id diam sit amet metus rutrum adipiscing. Integer sollicitudin felis ac metus aliquam ac tristique nibh cursus. Nulla varius diam ut metus adipiscing placerat. In purus magna, eleifend sed ultrices ut, suscipit ut risus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis sodales odio sit amet odio eleifend at aliquet enim lacinia. Cras iaculis, sapien ut condimentum viverra, erat sem mollis risus, gravida mattis enim ante et odio. Proin a mi vel libero mattis porttitor sit amet id lectus. Mauris nisl turpis, elementum ac porta a, sodales ut urna. In semper, purus quis pretium elementum, urna ligula sodales lorem, sit amet fringilla lorem orci id mi. Nunc sit amet tellus id tortor imperdiet lobortis. Morbi id nunc vitae mauris pretium tincidunt.
 
-Curabitur in dui nisi. Vivamus ut est a ipsum consequat sodales. Phasellus odio tellus, dapibus fringilla luctus nec, auctor et velit. Vivamus eget diam eu lorem tristique gravida et id purus. Mauris faucibus consectetur ligula, tempus pretium lectus volutpat eget. Phasellus mollis vestibulum tortor, at dapibus dolor pulvinar nec. Nunc dignissim metus sit amet nulla porttitor sodales. Etiam elit metus, auctor nec lacinia at, lobortis a augue. Aenean orci lorem, ultricies quis tristique ac, volutpat vel est. Etiam vitae faucibus justo. Donec neque nulla, accumsan non placerat ut, molestie et diam. Fusce tellus quam, sodales non viverra sed, molestie nec leo. Morbi placerat orci nec mauris malesuada mollis. Sed tincidunt mauris quis nunc pretium mollis. Pellentesque dictum leo nec felis laoreet id mollis velit volutpat. Nullam rhoncus laoreet tempus. 
-
-\section{Further sections and subsections}
-
-Fusce tempus risus eget neque sagittis congue. Suspendisse adipiscing sagittis lorem luctus ultrices. Integer mauris quam, aliquet nec posuere a, porta a est. Praesent a ante metus. Donec non turpis ac tortor suscipit egestas. Vivamus blandit laoreet quam, nec feugiat enim mattis ut. Nullam quam massa, dapibus quis convallis et, consectetur ac justo. Fusce varius, leo ac sodales laoreet, leo massa aliquet massa, at pellentesque quam lacus quis ante. Morbi sollicitudin, eros non interdum ornare, diam felis euismod quam, eget auctor est neque eu lorem. Nullam ut tortor leo, vitae hendrerit erat. Maecenas convallis massa quis lorem rhoncus vestibulum. Nunc vel nulla mi. 
-
-\subsection{The first subsection}
-
-Donec et nibh elit, in gravida lectus. Nullam sem eros, tincidunt quis volutpat sed, gravida sit amet turpis. Duis quis lorem erat. Suspendisse facilisis feugiat semper. Pellentesque eu dui massa, consequat molestie quam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla eros metus, gravida nec mollis eget, ultricies ac turpis. Mauris vitae tempor ipsum.
-
-\subsection{The second subsection}
-
-Cras eu pellentesque sapien. Cras adipiscing ullamcorper orci sed hendrerit. Nunc hendrerit auctor nisi, in cursus dui rhoncus dapibus. Nam quis nunc sit amet urna volutpat mattis. Praesent gravida, risus nec lacinia tincidunt, risus mi luctus ante, eu dapibus arcu risus gravida dolor. Duis lobortis consectetur felis, et vehicula tortor vulputate et. Aenean interdum congue lobortis. Aliquam pellentesque dui eget diam pharetra lacinia. 
 
 \section{Overview Talks and Working Groups}
 
-\abstracttitle{A sample talk}
-\abstractauthor[John Doe]{John Doe (Somewhere University -- Somewhere City, DC)}
 
-\license
-\jointwork{Doe, John; Jane, Doe}
-\abstractref[http://dx.doi.org/1234.12/Doe.DOI.34]{J. Doe, J. Doe, ``Sample talk abstract used for Dagstuhl Manifestos,'' Journal of Manifesto Science, 1:8, pp.~34--78, 2012.}
-\abstractrefurl{http://dx.doi.org/1234.12/Doe.DOI.34}
-
-Providing an abstract of a talk may be helpful, but is not mandatory. Participants of Dagstuhl Perspectives Workshops are also asked to submit an abstract of their talks to the periodical \emph{Dagstuhl Reports} \cite{dagrep} which is a series for documenting all events at Schloss Dagstuhl. Details are given in \cite{dagman-manual} and \cite{dagman-sample}.
-
-\begin{thebibliography}{0}
-\bibitem{dagrep} Dagstuhl Reports: \url{http://www.dagstuhl.de/dagrep}
-\bibitem{dagman-manual} Schloss Dagstuhl -- Editorial Office,\textsl{The dagman class}. Schloss Dagstuhl, Germany, 2012.
-\bibitem{dagman-sample} John Q. Open, Joan R. Access, \textsl{A Manifesto Sample}, Dagstuhl Manifestos, 1:1, 1--8, 2012.
-\end{thebibliography}
 
 \section{Working Groups }
 
-\abstracttitle{Working Group on Preparing a manifesto for Dagstuhl Manifestos}
-\abstractauthor[John Q. Open, Jane Doe]{%
-John Q. Open (Dummy University Computing Laboratory, DC)\\
-Jane Doe (Somewhere University -- Somewhere City, DC)
-}
-\license
-
-This working group focused on how to prepare a manifesto for a Dagstuhl Perspectives Workshop.
-
-
-
-
-% optiona: appendix
-\iffalse
-\begin{appendix}
-
-\section{This is a sample appendix}
-
-Cras eu nisl et eros blandit faucibus. Ut fringilla tempor nisl consequat ullamcorper. Donec venenatis tortor id nisl pharetra id accumsan neque posuere. Integer orci arcu, consectetur et congue eget, fermentum eu leo. Mauris pulvinar viverra adipiscing. Sed scelerisque erat id tortor facilisis ut pulvinar erat pharetra. Quisque purus purus, condimentum sit amet condimentum ac, laoreet at nibh.
-\section{This is a second appendix}
-
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
-amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
-duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
-sit amet.
-
-\end{appendix}
-\fi
-
 
 \begin{participants}
-\participant Joan R. Access\\  Dummy Affilliation -- City, DC
-\participant Jane Doe\\ Somewhere University -- City2, DC
-\participant John Doe\\ Somewhere University -- City2, DC
-\participant John Q. Open\\ Dummy University Computing Laboratory, DC
+\participant Alice Allen\\ University of Maryland -- College Park
+\participant Cecilia Aragon\\ University of Washington -- Seattle
+\participant Christoph Becker\\ University of Toronto
+\participant Jeffrey Carver\\ University of Alabama
+\participant Andrei Chi\c{s}\\ University of Bern
+\participant Benoit Combemale\\ IRISA -- Rennes
+\participant Mike Croucher\\ University of Sheffield
+\participant Kevin Crowston\\ Syracuse University
+\participant Daniel Garijo\\ Technical University of Madrid
+\participant Ashish Gehani\\ SRI -- Menlo Park
+\participant Carole Goble\\ University of Manchester
+\participant Robert Haines\\ University of Manchester
+\participant Robert Hirschfeld\\ Hasso-Plattner-Institut -- Potsdam
+\participant James Howison\\ University of Texas -- Austin
+\participant Katy Huff\\ University of California -- Berkeley
+\participant Caroline Jay\\ University of Manchester
+\participant Dan Katz\\ University of Illinois at Urbana Champaign
+\participant Claude Kirchner\\ INRIA -- Le Chesnay
+\participant Katie Kuksenok\\ University of Washington -- Seattle
+\participant Ralf L\"ammel\\ Universit\"at Koblenz-Landau
+\participant Oscar Nierstrasz\\ University of Bern
+\participant Matt Turk\\ University of Illinois at Urbana Champaign
+\participant Rob van Nieuwpoort\\ VU University Amsterdam
+\participant Matthew Vaughn\\ University of Texas -- Austin
+\participant Jurgen Vinju\\ CWI -- Amsterdam
 \end{participants}
 
 
-\section*{Acknowledgements}
-
-We thank John Doe and Jane Doe for their valuable contributions.
+%\section*{Acknowledgements}
+%
+%We thank John Doe and Jane Doe for their valuable contributions.
 
 
 %\bibliography{dagman-sample} % use bibtex or thebibliography-environment (as below)
 
-\nocite{Simpson}
+\nocite{FORCE11}
 
-\begin{thebibliography}{50}
-\bibitem{Simpson} Homer J. Simpson. \textsl{Mmmmm...donuts}. Evergreen Terrace Printing Co., Springfield, Somewhere, USA, 1998
-\end{thebibliography}
+
+\bibliography{eas}
+\bibliographystyle{plain}
+
+%\begin{thebibliography}{50}
+%\bibitem{Simpson} Homer J. Simpson. \textsl{Mmmmm...donuts}. Evergreen Terrace Printing Co., Springfield, Somewhere, USA, 1998
+%\end{thebibliography}
 
 \end{document}
