--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -5,6 +5,7 @@
   %for section-numbered lemmas etc., use "numberwithinsect"
 
 \usepackage{microtype}%if unwanted, comment out or use option "draft"
+\input{edit-macros.tex}
 
 \bibliographystyle{plain}%the recommended bibstyle
 
@@ -75,6 +76,7 @@
 
 \begin{abstract}
 ABSTRACT
+\on{to do}
 \end{abstract}
 
 \section*{Executive Summary}
