mind map of pledges

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -15,32 +15,58 @@
 % \titlerunning{A Manifesto Sample}%optional
 
 
+\author[1]{Alice Allen}\affil[1]{University of Maryland -- College Park, US}
+\author[2]{Cecilia Aragon}\affil[2]{University of Washington -- Seattle, US}
+\author[3]{Christoph Becker}\affil[3]{University of Toronto, Canada}
+\author[4]{Jeffrey Carver}\affil[4]{University of Alabama, US}
+\author[5]{Andrei Chi\c{s}}\affil[5]{University of Bern, Switzerland}
+\author[6]{Benoit Combemale}\affil[6]{IRISA -- Rennes, France}
+\author[7]{Mike Croucher}\affil[7]{University of Sheffield, UK}
+\author[8]{Kevin Crowston}\affil[8]{Syracuse University, US}
+\author[9]{Daniel Garijo}\affil[9]{Technical University of Madrid, Spain}
+\author[10]{Ashish Gehani}\affil[10]{SRI -- Menlo Park, US}
+\author[11]{Carole Goble}\affil[11]{University of Manchester, UK}
+\author[12]{Robert Haines}\affil[12]{University of Manchester, UK}
+\author[13]{Robert Hirschfeld}\affil[13]{Hasso-Plattner-Institut -- Potsdam, Germany}
+\author[14]{James Howison}\affil[14]{University of Texas -- Austin, US}
+\author[15]{Katy Huff}\affil[15]{University of California -- Berkeley, US}
+\author[16]{Caroline Jay}\affil[16]{University of Manchester, UK}
+\author[17]{Dan Katz}\affil[17]{University of Illinois at Urbana Champaign, US}
+\author[18]{Claude Kirchner}\affil[18]{INRIA -- Le Chesnay, France}
+\author[19]{Katie Kuksenok}\affil[19]{University of Washington -- Seattle, US}
+\author[20]{Ralf L\"{a}mmel}\affil[20]{Universit\"{a}t Koblenz-Landau, Germany}
+\author[21]{Oscar Nierstrasz}\affil[21]{University of Bern, Switzerland}
+\author[22]{Matt Turk}\affil[22]{University of Illinois at Urbana Champaign, US}
+\author[23]{Rob van Nieuwpoort}\affil[23]{VU University Amsterdam, The Netherlands}
+\author[24]{Matthew Vaughn}\affil[24]{University of Texas -- Austin, US}
+\author[25]{Jurgen Vinju}\affil[25]{CWI -- Amsterdam, The Netherlands}
 
-\author[1]{Alice Allen}\affil[1]{University of Maryland -- College Park, US. \texttt{aallen@astro.umd.edu}}
-\author[2]{Cecilia Aragon}\affil[2]{University of Washington -- Seattle, US. \texttt{aragon@uw.edu}}
-\author[3]{Christoph Becker}\affil[3]{University of Toronto, Canada. \texttt{christoph.becker@utoronto.ca}}
-\author[4]{Jeffrey Carver}\affil[4]{University of Alabama, US. \texttt{carver@cs.ua.edu}}
-\author[5]{Andrei Chi\c{s}}\affil[5]{University of Bern, Switzerland. \texttt{andrei@inf.unibe.ch}}
-\author[6]{Benoit Combemale}\affil[6]{IRISA -- Rennes, France. \texttt{benoit.combemale@irisa.fr}}
-\author[7]{Mike Croucher}\affil[7]{University of Sheffield, UK. \texttt{m.croucher@sheffield.ac.uk}}
-\author[8]{Kevin Crowston}\affil[8]{Syracuse University, US. \texttt{crowston@syr.edu}}
-\author[9]{Daniel Garijo}\affil[9]{Technical University of Madrid, Spain. \texttt{dgarijo@isi.edu}}
-\author[10]{Ashish Gehani}\affil[10]{SRI -- Menlo Park, US. \texttt{ashish.gehani@sri.com}}
-\author[11]{Carole Goble}\affil[11]{University of Manchester, UK. \texttt{carole.goble@manchester.ac.uk}}
-\author[12]{Robert Haines}\affil[12]{University of Manchester, UK. \texttt{robert.haines@manchester.ac.uk}}
-\author[13]{Robert Hirschfeld}\affil[13]{Hasso-Plattner-Institut -- Potsdam, Germany. \texttt{robert.hirschfeld@hpi.de}}
-\author[14]{James Howison}\affil[14]{University of Texas -- Austin, US. \texttt{jhowison@ischool.utexas.edu}}
-\author[15]{Katy Huff}\affil[15]{University of California -- Berkeley, US. \texttt{katyhuff@gmail.com}}
-\author[16]{Caroline Jay}\affil[16]{University of Manchester, UK. \texttt{caroline.jay@manchester.ac.uk}}
-\author[17]{Dan Katz}\affil[17]{University of Illinois at Urbana Champaign, US. \texttt{dskatz@illinois.edu}}
-\author[18]{Claude Kirchner}\affil[18]{INRIA -- Le Chesnay, France. \texttt{claude.kirchner@inria.fr}}
-\author[19]{Katie Kuksenok}\affil[19]{University of Washington -- Seattle, US. \texttt{Katerena.Kuksenok@gmail.com}}
-\author[20]{Ralf L\"{a}mmel}\affil[20]{Universit\"{a}t Koblenz-Landau, Germany. \texttt{laemmel@uni-koblenz.de}}
-\author[21]{Oscar Nierstrasz}\affil[21]{University of Bern, Switzerland. \texttt{oscar@inf.unibe.ch}}
-\author[22]{Matt Turk}\affil[22]{University of Illinois at Urbana Champaign, US. \texttt{matthewturk@gmail.com}}
-\author[23]{Rob van Nieuwpoort}\affil[23]{VU University Amsterdam, The Netherlands. \texttt{rob@cs.vu.nl}}
-\author[24]{Matthew Vaughn}\affil[24]{University of Texas -- Austin, US. \texttt{vaughn@tacc.utexas.edu}}
-\author[25]{Jurgen Vinju}\affil[25]{CWI -- Amsterdam, The Netherlands. \texttt{Jurgen.Vinju@cwi.nl}}
+%
+%\author[1]{Alice Allen}\affil[1]{University of Maryland -- College Park, US. \texttt{aallen@astro.umd.edu}}
+%\author[2]{Cecilia Aragon}\affil[2]{University of Washington -- Seattle, US. \texttt{aragon@uw.edu}}
+%\author[3]{Christoph Becker}\affil[3]{University of Toronto, Canada. \texttt{christoph.becker@utoronto.ca}}
+%\author[4]{Jeffrey Carver}\affil[4]{University of Alabama, US. \texttt{carver@cs.ua.edu}}
+%\author[5]{Andrei Chi\c{s}}\affil[5]{University of Bern, Switzerland. \texttt{andrei@inf.unibe.ch}}
+%\author[6]{Benoit Combemale}\affil[6]{IRISA -- Rennes, France. \texttt{benoit.combemale@irisa.fr}}
+%\author[7]{Mike Croucher}\affil[7]{University of Sheffield, UK. \texttt{m.croucher@sheffield.ac.uk}}
+%\author[8]{Kevin Crowston}\affil[8]{Syracuse University, US. \texttt{crowston@syr.edu}}
+%\author[9]{Daniel Garijo}\affil[9]{Technical University of Madrid, Spain. \texttt{dgarijo@isi.edu}}
+%\author[10]{Ashish Gehani}\affil[10]{SRI -- Menlo Park, US. \texttt{ashish.gehani@sri.com}}
+%\author[11]{Carole Goble}\affil[11]{University of Manchester, UK. \texttt{carole.goble@manchester.ac.uk}}
+%\author[12]{Robert Haines}\affil[12]{University of Manchester, UK. \texttt{robert.haines@manchester.ac.uk}}
+%\author[13]{Robert Hirschfeld}\affil[13]{Hasso-Plattner-Institut -- Potsdam, Germany. \texttt{robert.hirschfeld@hpi.de}}
+%\author[14]{James Howison}\affil[14]{University of Texas -- Austin, US. \texttt{jhowison@ischool.utexas.edu}}
+%\author[15]{Katy Huff}\affil[15]{University of California -- Berkeley, US. \texttt{katyhuff@gmail.com}}
+%\author[16]{Caroline Jay}\affil[16]{University of Manchester, UK. \texttt{caroline.jay@manchester.ac.uk}}
+%\author[17]{Dan Katz}\affil[17]{University of Illinois at Urbana Champaign, US. \texttt{dskatz@illinois.edu}}
+%\author[18]{Claude Kirchner}\affil[18]{INRIA -- Le Chesnay, France. \texttt{claude.kirchner@inria.fr}}
+%\author[19]{Katie Kuksenok}\affil[19]{University of Washington -- Seattle, US. \texttt{Katerena.Kuksenok@gmail.com}}
+%\author[20]{Ralf L\"{a}mmel}\affil[20]{Universit\"{a}t Koblenz-Landau, Germany. \texttt{laemmel@uni-koblenz.de}}
+%\author[21]{Oscar Nierstrasz}\affil[21]{University of Bern, Switzerland. \texttt{oscar@inf.unibe.ch}}
+%\author[22]{Matt Turk}\affil[22]{University of Illinois at Urbana Champaign, US. \texttt{matthewturk@gmail.com}}
+%\author[23]{Rob van Nieuwpoort}\affil[23]{VU University Amsterdam, The Netherlands. \texttt{rob@cs.vu.nl}}
+%\author[24]{Matthew Vaughn}\affil[24]{University of Texas -- Austin, US. \texttt{vaughn@tacc.utexas.edu}}
+%\author[25]{Jurgen Vinju}\affil[25]{CWI -- Amsterdam, The Netherlands. \texttt{Jurgen.Vinju@cwi.nl}}
 
 
 %\author[1]{Long list of authors}
@@ -49,7 +75,7 @@
 %  \texttt{open@dummyuni.org}}
 %%\affil[2]{Department of Informatics, Dummy College Address, Country
 %%  \texttt{access@dummycollege.org}}
-\authorrunning{Long list of authors}%optional
+\authorrunning{A. Allen et al.}%optional
 
 \subjclass{Dummy classification: please check \url{http://www.acm.org/about/class/ccs98-html}. Cite, for example, as:  ``B.3.3 Performance Analysis and Design Aids, C.1.2 Multiple Data Stream Architectures (Multiprocessors)''}% mandatory: Please choose ACM 1998 classifications from http://www.acm.org/about/class/ccs98-html . E.g., cite as "F.1.1 Models of Computation". 
 \keywords{Dummy keywords: Please provide 1--5 keywords}% mandatory: Please provide 1-5 keywords
@@ -74,11 +100,14 @@
 
 \maketitle
 
+% ==================================================
 \begin{abstract}
-ABSTRACT
-\on{to do}
+
+\todo{ABSTRACT < 1 page}
+
 \end{abstract}
 
+% ==================================================
 \section*{Executive Summary}
 % \summaryauthor and \license is optional
 %\summaryauthor[John Q. Open and Joan R. Access]{%
@@ -87,22 +116,40 @@ ABSTRACT
 %}
 %\license
 
-SUMMARY
+\todo{\\
+- TLDR\\
+- Pledges\\
+1-2 pages
+}
 
+% ==================================================
 \tableofcontents
 
-
+% ==================================================
 \section{Introduction}
 
+\todo{recycle proposal text}
+
+% ==================================================
+\section{Responsible Academic Software Development}
+
+\todo{Pledges plus explanations}
+
+% ==================================================
+\section{Future Research Directions}
 
 
-\section{Overview Talks and Working Groups}
+% optiona: appendix
+\iffalse
+\begin{appendix}
+% ==================================================
+\section{Related Material}
 
+\end{appendix}
+\fi
 
-
-\section{Working Groups }
-
-
+% ==================================================
+\on{Since everyone is an author, do we need this list?}
 \begin{participants}
 \participant Alice Allen\\ University of Maryland -- College Park
 \participant Cecilia Aragon\\ University of Washington -- Seattle
