added lists of pledges

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -8,7 +8,7 @@
 \usepackage{microtype}%if unwanted, comment out or use option "draft"
 \input{edit-macros.tex}
 % ============================================================
-\renewcommand{\paragraph}[1]{{\bf #1}\xspace}
+\renewcommand{\paragraph}[1]{\subsubsection*{#1}\xspace}
 % ============================================================
 \newcommand{\ie}{\emph{i.e.},\xspace}
 \newcommand{\eg}{\emph{e.g.},\xspace}
@@ -132,6 +132,44 @@
 }
 
 
+\paragraph{Citation \& Reviewing}
+\begin{itemize}
+\item I will properly cite software used to produce my research results.
+%\item When reviewing, I will require others to properly cite software used to produce research results.
+%\item I will actively encourage funding agencies to include software experts in their review processes.
+\end{itemize}
+
+\paragraph{Recognition}
+\begin{itemize}
+\item I will recognize software contributions in hiring and promotion within my institution.
+%\item I will recognize software contributions at conferences by proposing dedicated sessions and prizes.
+\end{itemize}
+
+\paragraph{Making intellectual content visible}
+\begin{itemize}
+\item I will publish the intellectual contributions of my research software.
+%\item I will distinguish the intellectual contribution of my software from its service contribution.
+%\item I will invite developers of software that enables research to be co-authors on papers about that research.
+%\item I will publish how I organize and run my software projects.
+\end{itemize}
+
+\paragraph{Software Projects}
+\begin{itemize}
+\item I will develop software in the open from the start, whenever possible.
+%\item I will acknowledge that reading and understanding source code is a legitimate part of the academic discussion.
+%\item I will match proposed software engineering practices to the actual needs and resources of the project.
+%\item I will help scientists improve the quality of their software without passing judgment.
+%\item I will document my academic software, including usage instructions, and input and output examples.
+\end{itemize}
+
+\paragraph{Sustainability}
+\begin{itemize}
+\item I will contribute to sustaining software I use and rely on. 
+%\item I will package, release and archive versions of my software.
+%\item I will make explicit how to cite my software.
+%\item I will consider and document the sustainability of my research software as thoroughly as its function.
+\end{itemize}
+
 
 
 % ==================================================
@@ -196,6 +234,107 @@ These results will form a starting point for disseminating the lessons learned a
 \section{Responsible Academic Software Development}
 
 \todo{Pledges plus explanations}
+
+
+
+\paragraph{Citation \& Reviewing}
+\begin{itemize}
+\item I will properly cite software used to produce my research results.
+\item When reviewing, I will require others to properly cite software used to produce research results.
+\item I will actively encourage funding agencies to include software experts in their review processes.
+\end{itemize}
+
+\paragraph{Recognition}
+\begin{itemize}
+\item I will recognize software contributions in hiring and promotion within my institution.
+\item I will recognize software contributions at conferences by proposing dedicated sessions and prizes.
+\end{itemize}
+
+\paragraph{Making intellectual content visible}
+\begin{itemize}
+\item I will publish the intellectual contributions of my research software.
+\item I will distinguish the intellectual contribution of my software from its service contribution.
+\item I will invite developers of software that enables research to be co-authors on papers about that research.
+\item I will publish how I organize and run my software projects.
+\end{itemize}
+
+\paragraph{Software Projects}
+\begin{itemize}
+\item I will develop software in the open from the start, whenever possible.
+\item I will acknowledge that reading and understanding source code is a legitimate part of the academic discussion.
+\item I will match proposed software engineering practices to the actual needs and resources of the project.
+\item I will help scientists improve the quality of their software without passing judgment.
+\item I will document my academic software, including usage instructions, and input and output examples.
+\end{itemize}
+
+\paragraph{Sustainability}
+\begin{itemize}
+\item I will contribute to sustaining software I use and rely on. 
+\item I will package, release and archive versions of my software.
+\item I will make explicit how to cite my software.
+\item I will consider and document the sustainability of my research software as thoroughly as its function.
+\end{itemize}
+
+
+
+
+
+% --------------------------------------------------
+\subsection{Citation \& Reviewing}
+
+\paragraph{I will properly cite software used to produce my research results.}
+
+\paragraph{When reviewing, I will require others to properly cite software used to produce research results.}
+
+\paragraph{I will actively encourage funding agencies to include software experts in their review processes.}
+
+
+% --------------------------------------------------
+\subsection{Recognition}
+
+\paragraph{I will recognize software contributions in hiring and promotion within my institution.}
+
+\paragraph{I will recognize software contributions at conferences by proposing dedicated sessions and prizes.}
+
+
+% --------------------------------------------------
+\subsection{Making intellectual content visible}
+
+\paragraph{I will publish the intellectual contributions of my research software.}
+
+\paragraph{I will distinguish the intellectual contribution of my software from its service contribution.}
+
+\paragraph{I will invite developers of software that enables research to be co-authors on papers about that research.}
+
+\paragraph{I will publish how I organize and run my software projects.}
+
+
+% --------------------------------------------------
+\subsection{Software Projects}
+
+\paragraph{I will develop software in the open from the start, whenever possible.}
+
+\paragraph{I will acknowledge that reading and understanding source code is a legitimate part of the academic discussion.}
+
+\paragraph{I will match proposed software engineering practices to the actual needs and resources of the project.}
+
+\paragraph{I will help scientists improve the quality of their software without passing judgment.}
+
+\paragraph{I will document my academic software, including usage instructions, and input and output examples.}
+
+% --------------------------------------------------
+\subsection{Sustainability}
+
+\paragraph{I will contribute to sustaining software I use and rely on.}
+
+\paragraph{I will package, release and archive versions of my software.}
+
+\paragraph{I will make explicit how to cite my software.}
+
+\paragraph{I will consider and document the sustainability of my research software as thoroughly as its function.}
+
+
+
 
 % ==================================================
 \section{Future Research Directions}
