--- a/eas.bib
+++ b/eas.bib
@@ -1,3 +1,5 @@
+% References. First version from:
+% https://github.com/katyhuff/2016-06-19-dagstuhl/blob/gh-pages/dagstuhl-manifesto.bib
 
 
 @misc{onto_soft_what_2016,
