--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -117,6 +117,7 @@
 \end{abstract}
 
 % ==================================================
+%:=== Executive Summary ===
 \section*{Executive Summary}
 % \summaryauthor and \license is optional
 %\summaryauthor[John Q. Open and Joan R. Access]{%
@@ -174,6 +175,7 @@
 \tableofcontents
 
 % ==================================================
+%:=== Introduction ===
 \section{Introduction}
 
 \todo{EDIT THIS DOWN (from the proposal)}
@@ -229,6 +231,7 @@ These results will form a starting point for disseminating the lessons learned a
 
 
 % ==================================================
+%:=== PLEDGES ===
 \section{Responsible Academic Software Development}
 
 \todo{Pledges plus explanations}
@@ -274,9 +277,7 @@ These results will form a starting point for disseminating the lessons learned a
 \end{itemize}
 
 
-
-
-
+%:=== DISCUSSION OF PLEDGES ===
 % --------------------------------------------------
 \subsection{Citation \& Reviewing}
 
@@ -335,10 +336,185 @@ These results will form a starting point for disseminating the lessons learned a
 
 
 % ==================================================
+%:=== Future Research Directions ===
 \section{Future Research Directions}
+
+The research areas outlined below are concerned with gaining a deeper understanding of both the process and the output of research software engineering activities. Because both tools and practices change so rapidly, and because such a wide diversity of these exists across different scientific disciplines and contexts, the overarching challenge is to understand how findings about specific projects or groups relate to broader trends over time. The research agenda includes developing ways to measure meaningful aspects of both practice and output of scientific programming and questions regarding design and development of tools to support aspects of relevant activities.
+
+% --------------------------------------------------
+\subsection{Quantifying the state of scientific software availability.}
+
+Existing work has included literature surveys of particular publication venues [e.g., TODO citations] which aim to provide some measurement of how much software is available. However, there is limited consensus on what constitutes code that is expected to be released, and the level of scrutiny with which to evaluate a particular publication. These limitations make comparisons across venues - let alone fields or disciplines - difficult. Such comparisons constitute a component of understanding the change which we try to bring about with improved tools and advocacy programs. 
+
+Specific questions:
+\begin{itemize}
+\item Map out which stakeholders (institutional, funding, etc) are invested in this information, and how to support the systematic gathering of relevant data. Map out existing work that has done these kinds of surveys and collate the various means to measure code availability and create a consistent recommended primer for conducting this survey, in order to enable a broader scope of study and comparability.
+\item In published scientific literature, how are rates of available, runnable, and hidden software changing over time?
+\item How can code duplication be identified? What are reasons for duplicated code, and what proportion of these are the result of breakdown in code discovery (rather than a reason arising from other needs)?
+\end{itemize}
+
+% --------------------------------------------------
+\subsection{Sustainability of software experimentation}
+
+Reproducibility of scientific experiments with major computational components require set-up environments that will, in principle, allow experiments to be redone in 2, 10, 100 and perhaps even 1000 years. We envision a future in which programs should be rerunnable and feel as persistent as email seems today. A journal like ipol allows for example to publish a paper as well as the runnable program, at least on the current machine available in 2016. Jupyter Notebooks allow the bundling of all necessary components and dependencies. To extend the persistence of software execution across environments and tools opens new research tracks in the rapidly changing hardware and software environments that we currently living with. This requires to explore in particular the following specific questions. 
+
+\begin{itemize}
+\item What we would like to have for a research environment for reproducibility, including  software and data, in 10 years from now? 
+\item How to design and implement virtual machine for forever-sustainable executable environments? 
+\item How to deal with legacy of softwares on the long term, in particular
+
+\begin{itemize}
+\item De-optimization, porting, refactoring of academic software
+\item Translation of legacy data formats?
+\end{itemize}
+
+\item Related work
+
+\begin{itemize}
+\item Executable papers, Peter Sloot (Elsevier?s executable paper competition)
+\item SHARE [2.0] Pieter van Gorp
+\end{itemize}
+
+\end{itemize}
+
+
+% --------------------------------------------------
+\subsection{Facilitating software discovery within and across disciplines}
+
+A major challenge of RSE is the diversity of programmer skill, project scale, level of concern and scale of action. Understanding the metadata ecosystem is another major research focus, but what other approaches, aside from (or complementary to) standards can support scaling discoverability? Other questions on this agenda are concerned with measuring the amount and cost of hidden software, but we already recognize it as a pain point that may be addressed with design, tooling, and workshops.
+
+
+\begin{itemize}
+\item HCI/design research: Understand user intention to support discoverability, explore opportunities for machine learning application
+\item Instrumentation of existing infrastructure (github), or use of annotation infrastructure such as hypothes.is, json-ld
+\end{itemize}
+
+% --------------------------------------------------
+\subsection{Software engineering tools improving productivity by tailoring to intent and skill}
+
+Many common tools that embody SE best practices are not written for scientists. Tools like Jupyter Notebook provide a more natural environment. In much SE research, the assumption is that the programmer is building and maintaining an artefact, but many scientists write code that should work and be correct, but not necessary constitute the same scale or persistence of artefact. There are ongoing SE research projects in this direction. SE is a scholarly community well-positioned to understand and design for these forms of programming.
+
+\begin{itemize}
+\item How can tool design bring what SE already knows (e.g., about testing, debugging, reproducibility) to bear into the scientific context?
+\item How are different tools augmenting programmer cognition?
+\item Develop typologies of software and corresponding design requirements. For example:
+\item Support of ?what-if? scenarios
+\item Multi-scale interaction - capability to ?zoom? in and out of levels of abstraction
+\item Avoid independent co-evolution
+\end{itemize}
+
+% --------------------------------------------------
+\subsection{Econometrics of infrastructure and hidden software}
+
+Claims of cost of hidden software or infrastructure maintenance remain (often) anecdotal or, at best, qualitative self-report. It is difficult to even measure the amount of hidden code (see Q1) let alone quantify its impact. However, this is needed for evaluation of interventions.
+
+
+\begin{itemize}
+\item What is the cost of code that is undiscoverable, unavailable, or unrunnable?
+\item How much does it cost to support / not support software that others use? 
+\item Map out existing models to share the costs, to inform recommendations
+\end{itemize}
+
+
+% --------------------------------------------------
+\subsection{Baseline practices and product quality as well as their expected changes}
+
+
+\begin{itemize}
+
+\item Find out what ?normally? exists  and changes to be able to observe the effect of intended and unintended interventions
+\item ?Avoid the base rate fallacy?
+\item Ties in with question 1 (which first needs answering before we can go into this properly)
+\item This requires frames of reference, such as:
+
+    \begin{itemize}
+    \item suitable quality models for research software
+    \item level of training of developers
+    \end{itemize}
+
+\item Comparison with broader scopes such as open-source software
+\item Ethnographic and qualitative studies
+\end{itemize}
+
+% --------------------------------------------------
+\subsection{Scientist Centric and Model Centric Scientific Software Engineering}
+
+
+\begin{itemize}
+\item Although it is already like that informally, we need tooling and methodology to enable scientists to think about their models first class
+\item Enabling co-research of the (visual) language needed to describe new theory, and enabling immediate simulation and verification of the new language.
+\item A generalized/moldable matlab, moldable maple;
+\end{itemize}
+
+% --------------------------------------------------
+\subsection{What is the invisible work of engineering academic software?}
+
+
+\begin{itemize}
+\item The human side
+\item Why is it persistently not acknowledged
+\end{itemize}
+
+% --------------------------------------------------
+\subsection{Metaphor, language, and contextuality}
+
+% --------------------------------------------------
+\subsection{Software as communication}
+
+ ????
+
+
+% --------------------------------------------------
+\subsection{What?s different about research software outside the sciences - e.g. in humanities?}
+
+(a fuzzy question at this point)
+
+% --------------------------------------------------
+\subsection{Analysis of scientific software ecosystem metadata}
+
+With better metadata about projects we can pursue systems that provide insight into the scientific software ecosystem. Example efforts currently include Depsy (Piowawr and Priem) and the Scientific Software Network Map (Bogart, Howison, and Herbsleb). These take data on software, authors, mentions in publications, and software projects and compose them into maps that provide information on direct and indirect impact, as well as data often hidden from developers (such as which projects are used with others by end users).
+
+Specific questions in the area of ecosystem analysis and metadata are:
+
+\begin{itemize}
+\item What kind of metadata is needed? What formats are appropriate?
+\item Metadata: what motivates projects to generate and maintain metadata?
+\item How well can software be observed in the literature?
+\item What are the moments in which participants are well motivated (e.g., people are motivated just after publishing a new paper to add it to their request for citation).
+\item Can we motivate software developers to improve metadata by pushing 
+\item Metrics of software: how can quantify and measure code meaningfully
+\end{itemize}
+
+% --------------------------------------------------
+\subsection{Techniques/metrics for evaluating the likely success and impact of proposed / nascent academic software projects}
+
+% --------------------------------------------------
+\subsection{Re-tooling the bibliographic software toolchain for software citation}
+
+For the vision of software citation to be realized, authors need to be able to store a metadata record for software with the needed fields, have the toolchain pass these fields through, and have style files produce output that includes them. To achieve this, interfaces for metadata storage will need to be upgraded to meet these needs and improved style files will need to be pushed into the hands of users.
+
+There are three broadly used bibliographic toolchains: bibtex, citation style language (Zotero | Papers | Mendeley ? citeproc ? Word | pandoc | Pages), and Endnote. Note, though, that there are many other systems:
+\url{https://en.wikipedia.org/wiki/Comparison_of_reference_management_software}
+
+In the bibtex world, this means standardizing a type definition (e.g., @software, although there may be existing partial standards) and have bibtex interfaces (such as bibdesk) handle it properly. The modern implementations of bibtex pass through unknown types, so that is fine. Then the bst files need to know what to do when receiving an @software record.
+
+In the Citation Style Language (csl) world, used by Zotero, Mendeley, and Papers, we need a csl type that is well support by the user interfaces, the citeproc implementations to pass it through to the csl files (e.g., https://github.com/citation-style-language/styles) and the csl files to know what to do with it.
+
+In the Endnote world Endnote and it?s proprietary style system makes some things difficult to change from the outside. Endnote has to have an appropriate type, and the style files have to process it.  Some information on this is available here: http://endnote.com/sites/en/files/m/pdf/en-x7-win-editing-reference-types-styles.pdf
+
+We can define a set of example software citations and produce metadata records for them. We can then use a continuous integration tool to run each of those through each style in each bibliographic tool chain. We can then compare the outputs to the software citation principles and say whether the style file produces valid software citations. By automating that comparison we can define a test.
+
+In the csl world style file distribution and editing is centralized; by changing the style files in the github repository they will eventually be distributed to users via their software client.
+
+In the bibtex world, however, bst are not centralized but distributed in a heterogenous manner (partly through latex distributions, partly through publisher websites). Often the closest thing to a canonical distribution point is the publishers sites, so we would have to convince each publisher to take an edited bst file.  One approach to drive this change could be to regularly tweet the failing test to the publisher and provide a link to a file that does not fail the tests.
+
+One additional necessary element would be tool support to make it easy to get appropriate metadata records into bibliographic software. For example, one could write web importers for Zotero that created an appropriate metadata record from the software landing page, with a generic fallback that works on repository home pages. These importers could read data from CITATION files, micro-format embedded metadata (e.g., schema.org SoftwareApplication) or data composed from repository APIs.
+
+
 
 
 % ==================================================
+%:=== APPENDIX ===
 \begin{appendix}
 \section{Related Material}
 
@@ -406,6 +582,31 @@ Has a set of requirements for software to be included in a paper: ``with documen
 \url{http://www.nature.com/articles/sdata201618}
 \cite{wilkinson_fair_2016}
 This includes focus on research data. The goal is to make them findable, accessible, interoperable and reusable. Can we apply these principles to software too?
+
+
+
+% ==========================================================
+%:=== JUNK ===
+\section*{Brainstorming detritus}
+
+NB: keep until final version, then delete
+
+Other outputs that might be the basis for an I will:
+
+Empirical survey of practices
+Shoot the dogma
+How to design communities
+Teaching how to design
+Teaching activities towards appreciation of software
+
+Q: should we make calls to policy makers, as well? Calls for things that are not possible through our actions, that require change by others? 
+
+Meta or follow-up manifesto?
+
+research on software code manifesto?
+\url{http://sciencecodemanifesto.org/}
+
+
 
 \end{appendix}
 
