edit macro examples

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -114,7 +114,26 @@
 
 \todo{ABSTRACT < 1 page}
 
+We propose a perspective seminar on the future of academic software, specially the process of engineering academic software and the resulting software quality. The current reality is that software is used both as academic research results and as part of academic research methods. With the advent of open-source software, artifact evaluation committees of conferences, and journals which include source code and running systems as part of the published artifacts, we foresee that software will increasingly be part of the academic process. The quality of this software must be accounted for, both a priori and a posteriori.
+
+In this context it is highly relevant that (a) we distribute software engineering knowledge and expertise across communities and (b) we identify  strengths, weaknesses, risks and opportunities of academic software engineering. Our goal is to produce a roadmap towards future professional software engineering for software-based research instruments and other software produced and used in an academic context.
+
 \end{abstract}
+
+% ==================================================
+\section*{About the edit macros}
+
+\on{Please use edit macros for comments you insert. See "edit-macros.tex" and add one for yourself if necessary.}
+
+There are generic macros for \todo{stuff to do} and \fix{stuff to fix}.
+
+There are macros for \ins{inserted text}, \del{deleted text}, and text to be changes \chg{from this}{to that}.
+
+
+\begin{inserted}
+There are also macros for blocks of text that have been inserted, deleted or refactored. These are useful to indicate proposals for changes to be checked by others in the pipeline.
+\end{inserted}
+
 
 % ==================================================
 %:=== Executive Summary ===
@@ -185,13 +204,6 @@
 
 \todo{EDIT THIS DOWN (from the proposal)}
 
-We propose a perspective seminar on the future of academic software, specially the process of engineering academic software and the resulting software quality. The current reality is that software is used both as academic research results and as part of academic research methods. With the advent of open-source software, artifact evaluation committees of conferences, and journals which include source code and running systems as part of the published artifacts, we foresee that software will increasingly be part of the academic process. The quality of this software must be accounted for, both a priori and a posteriori.
-
-In this context it is highly relevant that (a) we distribute software engineering knowledge and expertise across communities and (b) we identify  strengths, weaknesses, risks and opportunities of academic software engineering. Our goal is to produce a roadmap towards future professional software engineering for software-based research instruments and other software produced and used in an academic context.
-
-
-% --------------------------------------------------
-\subsection*{Topics of the Seminar}
 
 % ----------
 \paragraph{Academia is software driven.} As software is becoming a pervasive technology for automating and innovating every aspect of the human condition (work, play, love and war), it is also embedded firmly in the academic world. On the one hand, in computer science and software engineering research in particular we see experimental software and toolkits emerge continuously, either as part of the \emph{output} of research effort, or as part of the \emph{research method}. On the other hand, in general it may be that software is used even more actively in the other fields of research such as mathematics, biology, particle physics, astronomy, medicine, law. Again, we can distinguish the software part of the output (\ie development of innovative production techniques) from software which is part of research methods. 
