--- a/edit-macros.tex
+++ b/edit-macros.tex
@@ -96,11 +96,11 @@
 \newcommand\rev[2]{\nb{TODO (rev #1)}{#2}} % reviewer comments
 \newcommand\fix[1]{\nb{FIX}{#1}}
 \newcommand\todo[1]{\nb{TO DO}{#1}}
-\newcommand\on[1]{\nbc{ON}{#1}{olive}} % add more author macros here
-%\newcommand\XXX[1]{\nbc{XXX}{#1}{red}}
-%\newcommand\XXX[1]{\nbc{XXX}{#1}{blue}}
-%\newcommand\XXX[1]{\nbc{XXX}{#1}{brown}}
-%\newcommand\XXX[1]{\nbc{XXX}{#1}{cyan}}
+\newcommand\on[1]{\nbc{Oscar}{#1}{olive}} % add more author macros here
+\newcommand\jv[1]{\nbc{Jurgen}{#1}{red}}
+\newcommand\cg[1]{\nbc{Carol}{#1}{blue}}
+\newcommand\jh[1]{\nbc{James}{#1}{brown}}
+\newcommand\ck[1]{\nbc{Claude}{#1}{cyan}}
 %\newcommand\XXX[1]{\nbc{XXX}{#1}{darkgray}}
 %\newcommand\XXX[1]{\nbc{XXX}{#1}{gray}}
 %\newcommand\XXX[1]{\nbc{XXX}{#1}{magenta}}
